# Simulation

./: .gitignore  README.md
MuJoCo_Beginner/mujoco-3.1.4/: THIRD_PARTY_NOTICES
MuJoCo_Beginner/mujoco-3.1.4/myproject_cplusplus/00-hello_xml/: hello.xml  hello_mujoco.xml  hello_mujoco1.xml
MuJoCo_Beginner/mujoco-3.1.4/myproject_cplusplus/02-ProjectWithDrag/: CMakeLists.txt  main.cpp  main.py  projectile.py
MuJoCo_Intermediate/02-LoadPinocchio/: 07-test_ik_display.py
MuJoCo_Intermediate/L01_LoadMuJoCo/: load_mujoco.py
MuJoCo_Intermediate/L02_LoadPinocchio/: 01-load_model.py  02-test_se3.py  03-test_fk_jac.py  04-test_ik_clik.py  05-test_dynamics.py  06-load_display.py  common.py  conf.py  qlog.npy
MuJoCo_Intermediate/L03_LoadFramework/base/: __init__.py  base_config.py  base_mujoco.py
MuJoCo_Intermediate/L03_LoadFramework/ur5/: path.py  ur5_config.py  ur5_mujoco.py
MuJoCo_Intermediate/L041_Summary/base/: __init__.py  base_config.py  base_mujoco.py
MuJoCo_Intermediate/L041_Summary/franka/: franka_config.py  franka_mujoco.py  franka_mujoco_1.py  path.py
MuJoCo_Intermediate/L041_Summary/scripts/: launch_lcm_spy.sh  make_types.sh
MuJoCo_Intermediate/L041_Summary/utils/: lcm_pub.py  mujoco_utils.py  pino_solver.py
MuJoCo_Intermediate/L04_LoadCommunication/: 01-lcm_pub.py  01-lcm_sub.py  02-lcm_pub_class.py  02-lcm_sub_class.py  lcmlog-2025-05-16.00
MuJoCo_Intermediate/Reference/: README.md
MuJoCo_Intermediate/Reference/Kinova7DoF-MuJoCo/: README.md
MuJoCo_intermediate/01-LoadMuJoCo/: README.md  load_mujoco.py
(+95 files in other folders)
